fixed some item container layout issues, and added responsive mode to items.

--- a/src/styles/ClothList.css
+++ b/src/styles/ClothList.css
@@ -1,8 +1,25 @@
 .items-container {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
   padding: 3em;
   gap: 2em;
   margin: 0 auto;
-  width: fit-content;
+}
+
+@media screen and (max-width: 1400px) {
+  .items-container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media screen and (max-width: 950px) {
+  .items-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 530px) {
+  .items-container {
+    grid-template-columns: 1fr;
+  }
 }
