--- a/src/styles/Item.css
+++ b/src/styles/Item.css
@@ -4,7 +4,7 @@
 }
 
 .item img {
-  max-width: 400px;
+  max-width: 100%;
 }
 
 .image-info {
